--- a/android/signin/app/src/main/res/values/strings.xml
+++ b/android/signin/app/src/main/res/values/strings.xml
@@ -52,5 +52,5 @@
     <!-- TODO(user): replace with your real server client ID -->
     <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
          from https://console.developers.google.com/ -->
-    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
+    <string name="server_client_id">883675674157-u876egdfjfjdrmn47gjm79bpvusuvod4.apps.googleusercontent.com</string>
 </resources>
